--- a/index.html
+++ b/index.html
@@ -132,16 +132,15 @@
 
         <div class="hero4-container2">
             <div class="hero4-container-content">
-                <h1 class="hero4-container-heading">Automated Savings</h1>
-                <p class="hero4-container-paragraph">Build a dedicated savings faster on your terms,
-                    automatically or manually.
-
+                <h1 class="hero4-container-heading">Fixed Savings</h1>
+                <p class="hero4-container-paragraph">Lock money away for a fixed duration without having acesss to it's 
+                    like having a cusrom fixed deposit.
                 <p class="piggy-paragraph"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round" class="lucide lucide-corner-down-right-icon lucide-corner-down-right">
                         <polyline points="15 10 20 15 15 20" />
                         <path d="M4 4v7a4 4 0 0 0 4 4h12" />
-                    </svg>Piggybank</p>
+                    </svg>Safelock</p>
             </div>
 
             <div>
@@ -150,16 +149,15 @@
         </div>
         <div class="hero4-container3">
             <div class="hero4-container-content">
-                <h1 class="hero4-container-heading">Automated Savings</h1>
-                <p class="hero4-container-paragraph">Build a dedicated savings faster on your terms,
-                    automatically or manually.
-
+                <h1 class="hero4-container-heading">Goal-oriented Savings</h1>
+                <p class="hero4-container-paragraph">Reach all your savings goals faster.Save towards multiple goals on
+                    your own or with a group</p>
                 <p class="piggy-paragraph"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round" class="lucide lucide-corner-down-right-icon lucide-corner-down-right">
                         <polyline points="15 10 20 15 15 20" />
                         <path d="M4 4v7a4 4 0 0 0 4 4h12" />
-                    </svg>Piggybank</p>
+                    </svg>Target Savings</p>
             </div>
 
             <div>
@@ -170,16 +168,14 @@
 
         <div class="hero4-container4">
             <div class="hero4-container-content">
-                <h1 class="hero4-container-heading">Automated Savings</h1>
-                <p class="hero4-container-paragraph">Build a dedicated savings faster on your terms,
-                    automatically or manually.
-
+                <h1 class="hero4-container-heading">Flex Naira</h1>
+                <p class="hero4-container-paragraph">Save,transfer,manage,organise,and wihdraw your monry at any time.</p>
                 <p class="piggy-paragraph"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round" class="lucide lucide-corner-down-right-icon lucide-corner-down-right">
                         <polyline points="15 10 20 15 15 20" />
                         <path d="M4 4v7a4 4 0 0 0 4 4h12" />
-                    </svg>Piggybank</p>
+                    </svg>Flex Naira</p>
             </div>
 
             <div>
@@ -189,16 +185,14 @@
         </div>
         <div class="hero4-container5">
             <div class="hero4-container-content">
-                <h1 class="hero4-container-heading">Automated Savings</h1>
-                <p class="hero4-container-paragraph">Build a dedicated savings faster on your terms,
-                    automatically or manually.
-
+                <h1 class="hero4-container-heading">Flex Dollar</h1>
+                <p class="hero4-container-paragraph">Save and grow your money in foreign currencies suchn as Dollars.</p>
                 <p class="piggy-paragraph"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round" class="lucide lucide-corner-down-right-icon lucide-corner-down-right">
                         <polyline points="15 10 20 15 15 20" />
                         <path d="M4 4v7a4 4 0 0 0 4 4h12" />
-                    </svg>Piggybank</p>
+                    </svg>Flex Dollar</p>
             </div>
 
             <div>
@@ -208,16 +202,14 @@
         </div>
         <div class="hero4-container6">
             <div class="hero4-container-content">
-                <h1 class="hero4-container-heading">Automated Savings</h1>
-                <p class="hero4-container-paragraph">Build a dedicated savings faster on your terms,
-                    automatically or manually.
-
+                <h1 class="hero4-container-heading">HouseMoney</h1>
+                <p class="hero4-container-paragraph">Plan for your rent and household expenses
                 <p class="piggy-paragraph"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round" class="lucide lucide-corner-down-right-icon lucide-corner-down-right">
                         <polyline points="15 10 20 15 15 20" />
                         <path d="M4 4v7a4 4 0 0 0 4 4h12" />
-                    </svg>Piggybank</p>
+                    </svg>House Money</p>
             </div>
 
             <div>
